--- a/css/landing.css
+++ b/css/landing.css
@@ -1,71 +1,18 @@
-header {
-	border-bottom: 1px solid #0097A7;
-	background: #f9f9f9;
-	height: 90px;
-	width: 100%;
-}
-
-.header{
-	width: 94%;
-	padding:0 3%;
-	margin: 0 auto;
-	color: #0097A7;
-}
-
-/* remove after logo*/
-.temp{
-	font-size: 40px;
-	font-family: cursive;
-	font-weight: bold;
-	line-height:90px;
+.navbar{
+    height: 90px;
+    border-bottom: 1px solid rgba(0, 151, 167, 0.3);
+    border-radius: 0;
 }
 
 /* for svg logo */
-.logo{
-	padding-top: 0.5%;
-}
 .logo img{
-	width: 200px;
-	height: 70px;
-}
-
-.tempComingSoon{
-	text-align:center;
-	padding:100px;
-	font-size:72px;
-}
-
-.githubIcon{
-	margin-right: 20px;
+    width: 150px;
+    height: 87px;
 }
 
 .github{
-	border:1px solid #0097A7;
-	border-radius: 5px;
-	height: 32px;
-	font-weight:bold;
-	font-size:18px;
-	padding: 10px 20px 10px 15px;
-	margin-top: 18px;
-	line-height:32px;
-}
-
-.page-wrap {
-	width: 100%;
-    min-height: calc(100vh - 141px); /* 100vh - header height - footer height */    
-}
-
-footer{	
-	width: 100%;
-	height: 50px;
-	background: #333;
-	color: #ccc;
-	line-height:50px;
-}
-
-.footer{
-	font-size:80%;
-	width: 94%;
-	padding:0 3%;
-	margin: 0 auto;
+    border-radius: 5px;
+    border: 1px solid rgba(0, 151, 167, 0.7);
+    padding: 7px 13px;
+    margin-top:20px;
 }
