--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,16 @@
+.footer {
+    font-size: 14px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-top: 100px;
+    color: #99979c;
+    background-color: #2a2730;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+}
+
 footer + div {
     display: none !important;
 }
