--- a/css/landing.css
+++ b/css/landing.css
@@ -11,6 +11,7 @@
 }
 
 .github{
+    color: #0C98A8;
     border-radius: 5px;
     border: 1px solid rgba(0, 151, 167, 0.7);
     padding: 7px 13px;
